# kwin

src/plugins/: CMakeLists.txt
src/plugins/catmode/: CMakeLists.txt  catmode.cpp  catmode.h  catmode.notifyrc  catmode_detector.cpp  catmode_detector.h  main.cpp
src/plugins/catmode/kcm/: CMakeLists.txt  catmodesettings.kcfg  catmodesettings.kcfgc  kcm_catmode.json  kcmcatmode.cpp  kcmcatmode.h
src/plugins/catmode/kcm/ui/: main.qml
